objects/Code_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>Class_Id__c</fullName>
        <externalId>true</externalId>
        <label>Class Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Coverage_Result__c</fullName>
        <formula>IF (Total_Lines__c = 0 &amp;&amp; Lines_Covered__c = 0, &quot;N/A&quot;,
IF (Total_Lines__c &gt; 0 &amp;&amp; Code_Coverage__c &gt;= 0.75, &quot;Pass&quot;, &quot;Warning&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The result of the code coverage.  Must be 75% or higher to pass.</inlineHelpText>
        <label>Code Coverage Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Coverage__c</fullName>
        <formula>IF(Total_Lines__c  != 0 ,   Lines_Covered__c  /   Total_Lines__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total code coverage of all Apex classes and triggers.  75% is needed to pass.</inlineHelpText>
        <label>Apex Code Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lines_Covered__c</fullName>
        <inlineHelpText>The number of apex code lines that have been executed after running unit tests.</inlineHelpText>
        <label>Lines Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lines__c</fullName>
        <inlineHelpText>The total number of lines in this Apex trigger or class.</inlineHelpText>
        <label>Total Lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Summary__c</fullName>
        <inlineHelpText>The summary record that this test result is a part of.</inlineHelpText>
        <label>Unit Test Summary</label>
        <referenceTo>Unit_Test_Summary__c</referenceTo>
        <relationshipName>Apex_Coverage</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Code Coverage</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Code Coverage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Coverage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>